# crashpad

./: .gitmodules  CMakeLists.txt  README.md  package.nuspec
cmake/: MSVCRuntime.cmake
